--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
-.App {
-  text-align: center;
-}
+/* App.css */
+/* App.css */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
+  height: 100vh; /* Set the height of the container to full viewport height */
+}
+
+.section {
+  flex: 1;
+  border: 1px solid #ccc;
+  margin: 5px;
+  padding: 10px;
+  overflow-y: auto; /* Enable vertical scrolling if content overflows */
+}
+
+.weather-app {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+}
+.weather-appH1 {
+  padding: 20px;
+}
+
+.input-container {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-bottom: 10px;
+}
+.weatherDisplay {
+  margin-top: 5px;
+  border: 1px solid black;
+  border-radius: 8px;
+  /* background-image: linear-gradient(45deg, green, pink); */
 }
 
-.App-link {
-  color: #61dafb;
+input[type="text"] {
+  flex: 1;
+  padding: 8px;
+  margin-right: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+button {
+  padding: 8px 16px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+/* Media query for smaller screens */
+@media (max-width: 768px) {
+  .weather-app {
+    padding: 10px;
   }
-  to {
-    transform: rotate(360deg);
+
+  input[type="text"] {
+    padding: 6px;
+    font-size: 14px;
+  }
+
+  button {
+    padding: 6px 12px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 576px) {
+  .weather-app {
+    padding: 5px;
+  }
+
+  input[type="text"] {
+    padding: 4px;
+    font-size: 12px;
+  }
+
+  button {
+    padding: 4px 8px;
+    font-size: 12px;
   }
 }
