--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  height: 100vh; /* Set the height of the container to full viewport height */
+  height: auto; /* Set the height of the container to full viewport height */
 }
 
 .section {
@@ -12,6 +12,12 @@
   border: 1px solid #ccc;
   margin: 5px;
   padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  width: 250px;
+  background-color: #f9f9f9;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   overflow-y: auto; /* Enable vertical scrolling if content overflows */
 }
 
@@ -33,6 +39,7 @@
   margin-top: 5px;
   border: 1px solid black;
   border-radius: 8px;
+  border: 1px solid #ccc;
   /* background-image: linear-gradient(45deg, green, pink); */
 }
 
