--- a/src/DisplayCountries.css
+++ b/src/DisplayCountries.css
@@ -9,7 +9,7 @@
 
 .country-weather {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   border: 1px solid #ccc;
   border-radius: 5px;
