--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,14 @@
 /* App.css */
 /* App.css */
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: bisque;
+}
+
 .container {
   display: flex;
   flex-direction: column;
